syntax = "proto3";

package io.harness.delegate;

option java_multiple_files = true;

import "io/harness/delegate/ng_account.proto";
import "io/harness/delegate/ng_task.proto";
import "io/harness/delegate/ng_progress.proto";

message SendTaskRequest {
  reserved 1;
  NgAccountId account_id = 2;
  NgTaskSetupAbstractions setup_abstractions = 3;
  NgTaskDetails details = 4;
}

message SendTaskResponse {
  NgTaskId task_id = 1;
  bytes response_data = 2;
}

message SendTaskAsyncRequest {
  reserved 1;
  NgAccountId account_id = 2;
  NgTaskSetupAbstractions setup_abstractions = 3;
  NgTaskDetails details = 4;
}

message SendTaskAsyncResponse {
  NgTaskId task_id = 1;
}

message AbortTaskRequest {
  NgAccountId account_id = 1;
  NgTaskId task_id = 2;
}

message AbortTaskResponse {
  NgTaskExecutionStage canceled_at_stage = 1;
}
